<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:descendantFocusability="blocksDescendants"
    android:minHeight="70dp">

    <ImageView
        android:id="@+id/coverImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/cover_transition"
        android:contentDescription="@string/content_description_cover" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/coverImageView"
        android:layout_toEndOf="@+id/coverImageView"
        android:gravity="center"
        android:text="@string/default_artist_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tracksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/coverImageView"
        android:layout_toEndOf="@+id/coverImageView"
        android:text="@string/default_tracks"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>